[tool.poetry]
name = "config-app"
version = "0.1.0"
description = ""
authors = ["mkrzeminski <mkrzeminski@imgw.pl>"]
readme = "README.md"
packages = [{include = "config_app"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
